[tool.poetry]
name = "yolov5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.2"
numpy = ">=1.18.5"
opencv-python = ">=4.1.2"
Pillow = "^8.2.0"
PyYAML = ">=5.3.1"
scipy = ">=1.4.1"
torch = ">=1.7.0"
torchvision = ">=0.8.1"
tqdm = ">=4.41.0"
tensorboard = ">=2.4.1"
seaborn = ">=0.11.0"
pandas = "^1.2.4"
thop = "^0.0.31"
pycocotools = ">=2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
